const LOGIN = '/login';
const HOME = '/home';